# sqlite_bignum

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cmake/: CMocka.cmake  SQLite3.cmake
src/: sqlite_bignum.c  sqlite_bignum.h
test/: test_sqlite_bignum.c
